[package]
name = "urlgrep"
version = "2.0.0"
edition = "2021"
description = "Chrome-fingerprinted async URL grepper"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "signal", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream", "gzip", "brotli", "socks"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
rquickjs = { version = "0.9", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
